[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vajra"
version = "0.1.0"
description = "Open-source multi-cloud attack path intelligence"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
keywords = ["cloud", "security", "attack-paths", "devsecops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Security",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "cryptography==46.0.6",
    "duckdb>=1.5.1",
    "pandas>=3.0.2",
    "pydantic>=2.12",
    "pydantic-settings>=2.7",
    "requests==2.33.0",
    "rustworkx>=0.17.1",
]

[project.scripts]
vajra = "vajra.cli:app"

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
python_version = "3.13"
disallow_untyped_defs = true
disallow_any_generics = true
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "S", "B", "I", "UP"]
ignore = ["S101"]

[tool.bandit]
skips = ["B101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["vajra"]
omit = ["tests/*"]

[dependency-groups]
dev = [
    "bandit>=1.7",
    "detect-secrets>=1.5.0",
    "mypy>=1.10",
    "pip-audit>=2.10.0",
    "pydantic[mypy]>=2.12.5",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
]
